welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:13: error: type mismatch;
 found   : Unit
 required: Boolean
  if (detrompeur==0){
  ^