welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var detrompeur:Int=0
  avance()
  if (getCouleurSol()==Color.green){
    detrompeur=1
  }
  recule()
  if (detrompeur==1){
    avance()
    return true
  }
  if (detrompeur==0){
    gauche()
    return false
  }
}
  
	
  
  
